--- a/css/postions/index.html
+++ b/css/postions/index.html
@@ -9,27 +9,28 @@
 </head>
 
 <body>
-    <div class="box">
-        <div class="static">static</div>
-        <div class="relative">relative</div>
-        <div class="absolute">absolute</div>
-        <div class="fixed">fixed</div>
-        <div class="sticky">sticky</div>
-    <div class="box">
-        <div box class="static">static</div>
-        <div box class="relative">relative</div>
-        <div box class="absolute">absolute</div>
-        <div box class="fixed">fixed</div>
-        <div box class="sticky">sticky</div>
-    </div>
-     <div class="box">
-        <div class="static">static</div>
-        <div class="relative">relative</div>
-        <div class="absolute">absolute</div>
-        <div class="fixed">fixed</div>
-        <div class="sticky">sticky</div>
-    </div>
+    <div class="box static">static</div>
+    <div class="box relative">relative</div>
+    <section>
+        <div class="box absolute">absolute</div>
+        <div class="box fixed">fixed</div>
+        <div class="box sticky">sticky</div>
 
+    </section>
+    
+    <div class="box fixed">fixed</div>
+    <div class="box sticky">sticky</div>
+
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>   
+ 
 </body>
 
 </html>
