--- a/personal blog/index.html
+++ b/personal blog/index.html
@@ -67,7 +67,7 @@
                 dignissimos, assumenda sit! Eius animi iusto temporibus!</p>
         </div>
         <div class="founder-b">
-            <img src="/assets/images/images (1).jpg" alt="profile">
+            <img src="/assets/images/download (1).jpg" alt="profile">
             <h4>kanmani</h4><b></b>
             <p class="role">Founder of youstory</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, blanditiis rem nisi laborum, modi
